Pre-PR self-review fixes for industrial elevators
- Strip whitespace/reflow-only churn from MoveStep, MovePathHandler,
  MovementDisplay, BoardView, and TWGameManager by rebuilding their
  diffs from main plus only the elevator changes; this also restores
  main code the old dirty merge had silently reverted in TWGameManager
  (tank crit Edge rerolls, pitfall/tripwire formatting)
- Move UPDATE_INDUSTRIAL_ELEVATORS to the end of PacketCommand: the
  enum ordinal is the wire format, mid-enum inserts break compatibility
- Keep legacy elevator board-file token parsing (23 shipped boards)
  and add a deprecated Terrains.ELEVATOR alias for the renamed
  SOLARIS_ELEVATOR constant
- Extract MoveStep elevator validation into isElevatorMovementPossible
  with per-condition [IndustrialElevator] diagnostic logging; same
  logging in MovementDisplay button gating, the elevator processor
  call handling, and the shaft-fall and collapse-disable paths
- Guard the null team NPE in call priority; add @Nullable annotations
  on null-returning elevator lookups
- Clamp the board editor shaft-top spinner to the unsigned-byte range
  the exits encoding can actually store
- Update stale @since tags to 0.51.01 and new-file copyrights to
  2025-2026

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>